[gd_scene load_steps=24 format=3 uid="uid://cbt2em6utvs3s"]

[ext_resource type="Script" path="res://levels/ballistic_testing.gd" id="1_ky07f"]
[ext_resource type="PackedScene" uid="uid://dr48wela8mtxd" path="res://game_objects/items/weapons/easi_early_service_rifles/zs_52/zs_52.tscn" id="1_wchf8"]
[ext_resource type="Script" path="res://levels/entities/geo_ballistic_solid.gd" id="2_e6w36"]

[sub_resource type="LabelSettings" id="LabelSettings_0dgg1"]
font_size = 60

[sub_resource type="Environment" id="Environment_8p7aq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hiwqs"]

[sub_resource type="BoxMesh" id="BoxMesh_iomus"]

[sub_resource type="BoxShape3D" id="BoxShape3D_h31bb"]
size = Vector3(1, 1, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_uaubm"]
size = Vector3(1, 1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_pfqei"]
size = Vector3(1, 1, 0.25)

[sub_resource type="BoxMesh" id="BoxMesh_t45ws"]
size = Vector3(1, 1, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_wyjab"]
size = Vector3(1, 1, 0.125)

[sub_resource type="BoxMesh" id="BoxMesh_ltxjk"]
size = Vector3(1, 1, 0.125)

[sub_resource type="BoxShape3D" id="BoxShape3D_50cfd"]
size = Vector3(1, 1, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_h6n6o"]
size = Vector3(1, 1, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_tijqv"]
size = Vector3(1, 1, 0.01)

[sub_resource type="BoxMesh" id="BoxMesh_lb4on"]
size = Vector3(1, 1, 0.01)

[sub_resource type="BoxShape3D" id="BoxShape3D_ugerx"]
size = Vector3(1, 1, 0.005)

[sub_resource type="BoxMesh" id="BoxMesh_we8vr"]
size = Vector3(1, 1, 0.005)

[sub_resource type="BoxShape3D" id="BoxShape3D_124i6"]
size = Vector3(1, 1, 0.001)

[sub_resource type="BoxMesh" id="BoxMesh_4540w"]
size = Vector3(1, 1, 0.001)

[sub_resource type="BoxShape3D" id="BoxShape3D_3qf68"]
size = Vector3(1, 200, 0.001)

[sub_resource type="BoxMesh" id="BoxMesh_qc7ib"]
size = Vector3(1, 200, 0.001)

[node name="ballistic_testing" type="Node3D"]
script = ExtResource("1_ky07f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 11.0
offset_bottom = 20.0
text = "0
"
label_settings = SubResource("LabelSettings_0dgg1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8p7aq")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.0164578, -0.0488708, 0.99867, 0.0114867, 0.99873, 0.0490631, -0.999799, 0.0122789, -0.0158755, 3.42623, 0.231235, -5.13848)
projection = 1
size = 5.0

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(0.989884, -0.0221147, 0.140142, 0.0115534, 0.997061, 0.075731, -0.141405, -0.0733458, 0.987231, 1.53146, 0.231235, -1.72612)
current = true
size = 5.0

[node name="AK47-Projectile" parent="." instance=ExtResource("1_wchf8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.171724, 0.000634313, -2.05242)
gravity_scale = 0.0
magazine = 30

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
shape = SubResource("BoxShape3D_hiwqs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
mesh = SubResource("BoxMesh_iomus")
skeleton = NodePath("../..")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.780004)
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
shape = SubResource("BoxShape3D_h31bb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
mesh = SubResource("BoxMesh_uaubm")
skeleton = NodePath("../..")

[node name="StaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.550652)
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.61815)
shape = SubResource("BoxShape3D_pfqei")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.61966)
mesh = SubResource("BoxMesh_t45ws")
skeleton = NodePath("../..")

[node name="StaticBody3D4" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.295923)
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.11256)
shape = SubResource("BoxShape3D_wyjab")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.11204)
mesh = SubResource("BoxMesh_ltxjk")
skeleton = NodePath("../..")

[node name="StaticBody3D5" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.407014)
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.11256)
shape = SubResource("BoxShape3D_50cfd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.11204)
mesh = SubResource("BoxMesh_h6n6o")
skeleton = NodePath("../..")

[node name="StaticBody3D6" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.176087)
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.40021)
shape = SubResource("BoxShape3D_tijqv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.40069)
mesh = SubResource("BoxMesh_lb4on")
skeleton = NodePath("../..")

[node name="StaticBody3D7" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.221488)
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.40546)
shape = SubResource("BoxShape3D_ugerx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.40069)
mesh = SubResource("BoxMesh_we8vr")
skeleton = NodePath("../..")

[node name="StaticBody3D8" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25781)
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.40546)
shape = SubResource("BoxShape3D_124i6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.40069)
mesh = SubResource("BoxMesh_4540w")
skeleton = NodePath("../..")

[node name="StaticBody3D9" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -13)
visible = false
collision_layer = 3
script = ExtResource("2_e6w36")
pen_ratio = 1.0
armor_rating = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90.387, 0.133)
shape = SubResource("BoxShape3D_3qf68")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90.3869, 0.132539)
mesh = SubResource("BoxMesh_qc7ib")
skeleton = NodePath("../..")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="object_hit" from="StaticBody3D" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D2" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D3" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D4" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D5" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D6" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D7" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D8" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="object_hit" from="StaticBody3D9" to="." method="_on_csg_mesh_3d_object_hit"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
